--- a/FoodDataCentral/Views/Shared/_Layout.cshtml
+++ b/FoodDataCentral/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FoodSelection">Food Selection</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FoodRead">Food Read</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                     </li>
                 </ul>
